--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ scala:
    - 2.11.2
 jdk:
   - oraclejdk8
+script:
+  - sbt clean coverage test coverageReport &&
+    sbt coverageAggregate
+after_success:
+  - sbt coveralls
