--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ scala:
   - 2.12.0
 script:
   - sbt clean coverage test coverageReport
+  - sbt jacoco
+  - sbt coverageAggregate
 after_success:
   - sbt coveralls
